tests/baselines/reference/decoratorOnClassMethod12(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decoratorOnClassMethod12.ts(6,11): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decoratorOnClassMethod12.ts (1 errors) ====
    namespace M {
        class S {
            decorator(target: Object, key: string): void { }
        }
        class C extends S {
            @(super.decorator)
              ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            method() { }
        }
    }